# kestra-cli

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: agents.mdc
src/: main_cli.py
src/api_client/: auth.py  client.py  executions.py  flows.py  namespaces.py
src/cli/: __init__.py  executions.py  flows.py  namespaces.py
